Add image to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Haute Cuisine</h1>
+        <img src="./images/the_chef.png" alt="An AI generated image of Weird Al wearing a chef's hat and uniform" width="500" height="500">
         <ul>
         <li><a href="./recipes/roastedcrabshells.html">Roasted Crab Shells</a></li>
         <li><a href="./recipes/banana_hamburgs.html">Banana Hamburgs</a></li>
